// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Tertiary component Applies negative class correctly 1`] = `
<DocumentFragment>
  <div
    class="ssb-btn-tertiary negative"
  >
    <button
      aria-controls="accordion-section"
      aria-expanded="false"
      class="button-header closed icon"
      id="accordion-button-undefined"
      tabindex="0"
    >
      <span
        class="button-grid"
      >
        <span
          class="header-text"
        >
          Click Me!
        </span>
        <svg
          class="expand-icon"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </span>
    </button>
    <section
      aria-labelledby="accordion-button-undefined"
      class="accordion-body closed"
      id="accordion-section"
    >
      Body
    </section>
  </div>
</DocumentFragment>
`;

exports[`Button Tertiary component Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ssb-btn-tertiary"
  >
    <button
      aria-controls="accordion-section"
      aria-expanded="false"
      class="button-header closed icon"
      id="accordion-button-undefined"
      tabindex="0"
    >
      <span
        class="button-grid"
      >
        <span
          class="header-text"
        >
          Click Me!
        </span>
        <svg
          class="expand-icon"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </span>
    </button>
    <section
      aria-labelledby="accordion-button-undefined"
      class="accordion-body closed"
      id="accordion-section"
    >
      Body
    </section>
  </div>
</DocumentFragment>
`;

exports[`Button Tertiary component Renders toggle icon when accordion prop is true 1`] = `
<DocumentFragment>
  <div
    class="ssb-btn-tertiary"
  >
    <button
      aria-controls="accordion-section"
      aria-expanded="false"
      class="button-header closed icon"
      id="accordion-button-undefined"
      tabindex="0"
    >
      <span
        class="button-grid"
      >
        <span
          class="header-text"
        >
          Click Me!
        </span>
        <svg
          class="expand-icon"
          fill="none"
          height="22"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </span>
    </button>
    <section
      aria-labelledby="accordion-button-undefined"
      class="accordion-body closed"
      id="accordion-section"
    >
      Body
    </section>
  </div>
</DocumentFragment>
`;
